Add health and service endpoints
Added two new APIs to chcek internal health and to check dependencies/external interfaces, which is postgres
like existing /dcae-service-types does

Issue-ID: DCAEGEN2-1134
